--- a/landing.css
+++ b/landing.css
@@ -1,14 +1,33 @@
 body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 0;
 }
-
+ 
+.background-img {
+    position: absolute;
+    z-index: 0;
+    height: 100vh;
+    width: 100vw;
+}
+ 
+.background-filtro {
+    height: 100vh;
+    width: 100vw;
+    background-color: #00000094;
+    position: absolute;
+}
+ 
 .menuNav{
     background-color: rgb(58, 58, 58);
     height: 75px;
     display: flex;
     align-items: center;
+    width: 100vw;
+    z-index: 1;
 }
-
+ 
 .mainContentContainer{
     max-width: 400px;
     margin: 50px auto;
@@ -16,13 +35,14 @@ body{
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 2;
 }
-
+ 
 .pagesContainer{
     background-color: rgb(58, 58, 58);
     height: 700px;
 }
-
+ 
 .containerMenu{
     background-color: #385EED;
     width: 75px;
@@ -31,13 +51,13 @@ body{
     align-items: center;
     justify-content: center;
 }
-
+ 
 .menu{
     width: 50px;
     height: 50px;
     background-color: white;
 }
-
+ 
 .searchBar{
     background-color: white;
     height: 45px;
@@ -46,7 +66,7 @@ body{
     margin-right: 15px;
     border-radius: 20px;
 }
-
+ 
 .profileSpace{
     background-color: white;
     width: 50px;
@@ -55,7 +75,7 @@ body{
     border-radius: 100px;
     margin-right: 15px;
 }
-
+ 
 .buttonsDiv{
     width: 400px;
     margin-left: 35px;
@@ -63,9 +83,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: flex-start;
-
+ 
 }
-
+ 
 .buttonMenu{
     width: 100px;
     height: 40px;
@@ -77,84 +97,38 @@ body{
     text-decoration: none;
     color: black;
 }
-
+ 
 .buttonMenu:hover{
     background-color: azure;
 }
-
-
-.form-group {
-    margin-bottom: 20px;
-  }
  
-  label {
-    font-weight: bold;
-  }
- 
-  input[type="text"],
-  input[type="email"],
-  input[type="tel"],
-  input[type="password"],
-  select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
- 
-  .signFormButton {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
- 
-  .signFormButton:hover {
-    background-color: #0056b3;
-  }
-
-  .grid-container {
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 10px;
-    padding: 20px;
+.div-imagens {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 20vh;
+    width: 90vw;
+    margin-top: 30vh;
+    z-index: 2;
 }
-
-.grid-item {
-    background-color: #222121;
-    padding: 10px;
-    border-radius: 5px;
-    text-align: center;
+ 
+.titulo {
+    z-index: 2;
     color: #fff;
 }
 
-.grid-header {
-    background-color: #000;
-    color: #fff;
-    font-weight: bold;
+.imgList{
+    position: absolute;
+    width: 700px;
+    height: auto;
+
 }
 
-.newbackground{
-    background-color: rgb(102, 102, 102);
-}
-
-.gridCss{
-    grid-template-columns:none !important;
-    
-}
-
-.buttonsContainerForm{
+.containerCarrocel{
     display: flex;
 }
 
-.addMargin{
-    margin: 5px;
-}
-
-.desactivatedButton{
-background-color: gray !important
+.atual{
+    z-index: 1000;
 }
