--- a/login/login.css
+++ b/login/login.css
@@ -125,6 +125,19 @@ h2 {
     color: #272727;
 }
 
+#telaTitle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.errorMessage{
+    font-size: small;
+    color: red;
+    margin-bottom: 15px;
+    margin-top: 10px;
+}
+
 p {
     margin-top: 5vh;
     font-family: Arial;
